--- a/FriendsUI/src/app/friend/friend.component.html
+++ b/FriendsUI/src/app/friend/friend.component.html
@@ -1,1 +1,204 @@
-<p>friend works!</p>
+<div class="container">
+  <div class="border">
+    <button class="btn btn-md btn-outline-primary" (click)="open(content)">
+      <i class="fa fa-user"></i>New Friend</button>
+  </div>
+  <table class="table table-bordered table-stripped">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>FirstName</th>
+        <th>LastName</th>
+        <th>Department</th>
+        <th>Email</th>
+        <th>Country</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let friend of friends">
+        <td><span>{{friend.id}}</span></td>
+        <td><span>{{friend.firstName}}</span></td>
+        <td><span>{{friend.lastName}}</span></td>
+        <td><span>{{friend.department}}</span></td>
+        <td><span>{{friend.email}}</span></td>
+        <td><span>{{friend.country}}</span></td>
+        <td>
+          <button class="btn btn-sm btn-info" (click)="openDetails(contentDetails, friend)">
+            <i class="fa fa-search"></i>Details</button>
+          <button class="btn btn-sm btn-warning" (click)="openEdit(contentEdit, friend)">
+            <i class="fa fa-edit"></i>Edit</button>
+          <button class="btn btn-sm btn-danger" (click)="openDelete(contentDelete, friend)">
+            <i class="fa fa-remove"></i>Delete</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">New Friend</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
+      <div class="form-group">
+        <label for="firstname">Firstname</label>
+        <div class="input-group">
+          <input id="firstname" name="firstName" class="form-control" ngModel>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="lastname">LastName</label>
+        <div class="input-group">
+          <input id="lastname" name="lastName" class="form-control" ngModel>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="department">Department</label>
+        <div class="input-group">
+          <input id="department" name="department" class="form-control" ngModel>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <div class="input-group">
+          <input id="email" name="email" class="form-control" ngModel>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="country">Country</label>
+        <div class="input-group">
+          <input id="country" name="country" class="form-control" ngModel>
+        </div>
+      </div>
+      <div class="border text-center">
+        <button data-dismiss="modal" class="btn btn-info">Submit</button>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Close</button>
+  </div>
+</ng-template>
+
+<ng-template #contentDetails let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Visualizza dati</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
+      <div class="form-group">
+        <label>Firstname</label>
+        <div class="input-group">
+          <input id="fname" class="form-control" readonly>
+        </div>
+      </div>
+      <div class="form-group">
+        <label>LastName</label>
+        <div class="input-group">
+          <input id="lname" class="form-control" readonly>
+        </div>
+      </div>
+      <div class="form-group">
+        <label>Department</label>
+        <div class="input-group">
+          <input id="depart" class="form-control" readonly>
+        </div>
+      </div>
+      <div class="form-group">
+        <label>Email</label>
+        <div class="input-group">
+          <input id="mail" class="form-control" readonly>
+        </div>
+      </div>
+      <div class="form-group">
+        <label>Country</label>
+        <div class="input-group">
+          <input id="country2" class="form-control" readonly>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Close</button>
+  </div>
+</ng-template>
+
+<ng-template #contentEdit let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Aggiorna dati</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form [formGroup]="editForm" novalidate>
+      <div class="form-group">
+        <label for="idEdit">Id</label>
+        <div class="input-group">
+          <input id="idEdit" formControlName="id" class="form-control" readonly>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="firstnameEdit">Firstname</label>
+        <div class="input-group">
+          <input id="firstnameEdit" formControlName="firstName" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="lastnameEdit">LastName</label>
+        <div class="input-group">
+          <input id="lastnameEdit" formControlName="lastName" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="departmentEdit">Department</label>
+        <div class="input-group">
+          <input id="departmentEdit" formControlName="department" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="emailEdit">Email</label>
+        <div class="input-group">
+          <input id="emailEdit" formControlName="email" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="countryEdit">Country</label>
+        <div class="input-group">
+          <input id="countryEdit" formControlName="country" class="form-control">
+        </div>
+      </div>
+      <div class="border text-center">
+        <button data-dismiss="modal" class="btn btn-info" (click) = "onSave()">Submit</button>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Close</button>
+  </div>
+</ng-template>
+
+<ng-template #contentDelete let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">Confirm Delete</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <h2>Are you sure you want to delete this record.</h2>
+    <div class="border text-center"> 
+      <button data-dismiss="modal" class="btn btn-danger" (click)="onDelete()">Yes, Delete!</button> 
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Cancel</button>
+  </div>
+</ng-template>
