--- a/FriendsUI/src/styles.css
+++ b/FriendsUI/src/styles.css
@@ -2,5 +2,17 @@
 @import "~font-awesome/css/font-awesome.css";
 
 .container{
-    margin-top:5%;
+    margin-top:2%;
+  }
+  .border{
+    padding: 10px;
+  }
+  .btn{
+    margin-right: 10px;
+  }
+  .fa {
+    margin-right: 10px;
+  }
+  table .btn{
+    margin: 2px;
   }
